ESP/Vacuum/build/log/idf_py_stdout_output_327711
[1/11] Performing build step for 'bootloader'
[1/1] cd "/mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/build/bootloader/esp-idf/esptool_py" && /home/mart/Espressif/esp-tools/python_env/idf5.1_py3.10_env/bin/python /home/mart/Espressif/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /mnt/share/Embedded\ projecten/Vacuum/ESP/Vacuum/build/bootloader/bootloader.bin
Bootloader binary size 0x6730 bytes. 0x8d0 bytes (8%) free.
[2/9] Building CXX object esp-idf/ESP32_WiFi/CMakeFiles/__idf_ESP32_WiFi.dir/src/ESP32_WiFi.cpp.obj
FAILED: esp-idf/ESP32_WiFi/CMakeFiles/__idf_ESP32_WiFi.dir/src/ESP32_WiFi.cpp.obj 
/home/mart/Espressif/esp-tools/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-3213-gd29e53dc0c\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/build/config" -I"/mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/include/ESP32_WiFi/include" -I/home/mart/Espressif/esp-idf/components/newlib/platform_include -I/home/mart/Espressif/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/mart/Espressif/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/mart/Espressif/esp-idf/components/freertos/esp_additions/include/freertos -I/home/mart/Espressif/esp-idf/components/freertos/esp_additions/include -I/home/mart/Espressif/esp-idf/components/esp_hw_support/include -I/home/mart/Espressif/esp-idf/components/esp_hw_support/include/soc -I/home/mart/Espressif/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/mart/Espressif/esp-idf/components/esp_hw_support/port/esp32/. -I/home/mart/Espressif/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/mart/Espressif/esp-idf/components/heap/include -I/home/mart/Espressif/esp-idf/components/log/include -I/home/mart/Espressif/esp-idf/components/soc/include -I/home/mart/Espressif/esp-idf/components/soc/esp32 -I/home/mart/Espressif/esp-idf/components/soc/esp32/include -I/home/mart/Espressif/esp-idf/components/hal/esp32/include -I/home/mart/Espressif/esp-idf/components/hal/include -I/home/mart/Espressif/esp-idf/components/hal/platform_port/include -I/home/mart/Espressif/esp-idf/components/esp_rom/include -I/home/mart/Espressif/esp-idf/components/esp_rom/include/esp32 -I/home/mart/Espressif/esp-idf/components/esp_rom/esp32 -I/home/mart/Espressif/esp-idf/components/esp_common/include -I/home/mart/Espressif/esp-idf/components/esp_system/include -I/home/mart/Espressif/esp-idf/components/esp_system/port/soc -I/home/mart/Espressif/esp-idf/components/esp_system/port/include/private -I/home/mart/Espressif/esp-idf/components/xtensa/include -I/home/mart/Espressif/esp-idf/components/xtensa/esp32/include -I/home/mart/Espressif/esp-idf/components/lwip/include -I/home/mart/Espressif/esp-idf/components/lwip/include/apps -I/home/mart/Espressif/esp-idf/components/lwip/include/apps/sntp -I/home/mart/Espressif/esp-idf/components/lwip/lwip/src/include -I/home/mart/Espressif/esp-idf/components/lwip/port/include -I/home/mart/Espressif/esp-idf/components/lwip/port/freertos/include -I/home/mart/Espressif/esp-idf/components/lwip/port/esp32xx/include -I/home/mart/Espressif/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/mart/Espressif/esp-idf/components/esp_wifi/include -I/home/mart/Espressif/esp-idf/components/esp_event/include -I/home/mart/Espressif/esp-idf/components/esp_phy/include -I/home/mart/Espressif/esp-idf/components/esp_phy/esp32/include -I/home/mart/Espressif/esp-idf/components/esp_netif/include -I/home/mart/Espressif/esp-idf/components/nvs_flash/include -I/home/mart/Espressif/esp-idf/components/spi_flash/include -I/home/mart/Espressif/esp-idf/components/esp_partition/include -I/home/mart/Espressif/esp-idf/components/mqtt/esp-mqtt/include -I/home/mart/Espressif/esp-idf/components/tcp_transport/include -I/home/mart/Espressif/esp-idf/components/esp-tls -I/home/mart/Espressif/esp-idf/components/esp-tls/esp-tls-crypto -I/home/mart/Espressif/esp-idf/components/mbedtls/port/include -I/home/mart/Espressif/esp-idf/components/mbedtls/mbedtls/include -I/home/mart/Espressif/esp-idf/components/mbedtls/mbedtls/library -I/home/mart/Espressif/esp-idf/components/mbedtls/esp_crt_bundle/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og "-fmacro-prefix-map=/mnt/share/Embedded projecten/Vacuum/ESP/Vacuum=." -fmacro-prefix-map=/home/mart/Espressif/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu++20 -fno-exceptions -fno-rtti -std=gnu++17 -MD -MT esp-idf/ESP32_WiFi/CMakeFiles/__idf_ESP32_WiFi.dir/src/ESP32_WiFi.cpp.obj -MF esp-idf/ESP32_WiFi/CMakeFiles/__idf_ESP32_WiFi.dir/src/ESP32_WiFi.cpp.obj.d -o esp-idf/ESP32_WiFi/CMakeFiles/__idf_ESP32_WiFi.dir/src/ESP32_WiFi.cpp.obj -c '/mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/include/ESP32_WiFi/src/ESP32_WiFi.cpp'
/mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/include/ESP32_WiFi/src/ESP32_WiFi.cpp: In function 'void ESP32_WiFi_WiFiEventHandler(void*, esp_event_base_t, int32_t, void*)':
/mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/include/ESP32_WiFi/src/ESP32_WiFi.cpp:52:28: warning: unused variable 'event' [-Wunused-variable]
   52 |         ip_event_got_ip_t* event = (ip_event_got_ip_t*) event_data;
      |                            ^~~~~
/mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/include/ESP32_WiFi/src/ESP32_WiFi.cpp: In member function 'void ESP32_WiFi::WiFiInit()':
/mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/include/ESP32_WiFi/src/ESP32_WiFi.cpp:84:21: error: invalid cast from type 'std::string' {aka 'std::__cxx11::basic_string<char>'} to type 'uint8_t' {aka 'unsigned char'}
   84 |             .ssid = (uint8_t)_mWiFiSSID,
      |                     ^~~~~~~~~~~~~~~~~~~
/mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/include/ESP32_WiFi/src/ESP32_WiFi.cpp:85:25: error: invalid cast from type 'std::string' {aka 'std::__cxx11::basic_string<char>'} to type 'uint8_t' {aka 'unsigned char'}
   85 |             .password = (uint8_t)_mWiFiPass,
      |                         ^~~~~~~~~~~~~~~~~~~
/mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/include/ESP32_WiFi/src/ESP32_WiFi.cpp:91:28: error: invalid conversion from 'uint8_t*' {aka 'unsigned char*'} to 'char*' [-fpermissive]
   91 |     strcpy(wifi_config.sta.password, _mWiFiPass.c_str());
      |            ~~~~~~~~~~~~~~~~^~~~~~~~
      |                            |
      |                            uint8_t* {aka unsigned char*}
In file included from /home/mart/Espressif/esp-idf/components/lwip/port/include/lwipopts.h:12,
                 from /home/mart/Espressif/esp-idf/components/lwip/lwip/src/include/lwip/opt.h:51,
                 from /home/mart/Espressif/esp-idf/components/lwip/lwip/src/include/lwip/sockets.h:42,
                 from /home/mart/Espressif/esp-idf/components/lwip/include/lwip/sockets.h:8,
                 from /mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/include/ESP32_WiFi/src/ESP32_WiFi.cpp:16:
/home/mart/Espressif/esp-tools/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/xtensa-esp32-elf/sys-include/string.h:38:18: note:   initializing argument 1 of 'char* strcpy(char*, const char*)'
   38 | char    *strcpy (char *__restrict, const char *__restrict);
      |                  ^~~~~~
/mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/include/ESP32_WiFi/src/ESP32_WiFi.cpp:92:28: error: invalid conversion from 'uint8_t*' {aka 'unsigned char*'} to 'char*' [-fpermissive]
   92 |     strcpy(wifi_config.sta.ssid, _mWiFiSSID.c_str());
      |            ~~~~~~~~~~~~~~~~^~~~
      |                            |
      |                            uint8_t* {aka unsigned char*}
In file included from /home/mart/Espressif/esp-idf/components/lwip/port/include/lwipopts.h:12,
                 from /home/mart/Espressif/esp-idf/components/lwip/lwip/src/include/lwip/opt.h:51,
                 from /home/mart/Espressif/esp-idf/components/lwip/lwip/src/include/lwip/sockets.h:42,
                 from /home/mart/Espressif/esp-idf/components/lwip/include/lwip/sockets.h:8,
                 from /mnt/share/Embedded projecten/Vacuum/ESP/Vacuum/include/ESP32_WiFi/src/ESP32_WiFi.cpp:16:
/home/mart/Espressif/esp-tools/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/xtensa-esp32-elf/sys-include/string.h:38:18: note:   initializing argument 1 of 'char* strcpy(char*, const char*)'
   38 | char    *strcpy (char *__restrict, const char *__restrict);
      |                  ^~~~~~
ninja: build stopped: subcommand failed.
